# olc-codejam-2023

./: .gitmodules  .ignore  CMakeLists.txt  README.md  premake5.lua
libs/bixxy-engine/: CMakeLists.txt
libs/bixxy-engine/audio/: audiohandler.cpp  audiohandler.h
libs/bixxy-engine/fonts/: fonthandler.cpp  fonthandler.h
libs/bixxy-engine/input/: inputhandler.cpp  inputhandler.h
libs/bixxy-engine/log/: loghandler.cpp  loghandler.h
libs/bixxy-engine/settings/: settingshandler.cpp  settingshandler.h
libs/bixxy-engine/state/: state.h
libs/bixxy-engine/texture/: texturehandler.cpp  texturehandler.h
libs/bixxy-engine/utils/: helpers.cpp  helpers.h  lerp.cpp  lerp.h  quadtree.h  vectors.h
libs/raylib/src/: config.h
project/: levels.tiled-session  main.cmake  shell.html
project/assets/levels/: level01.tmj
project/assets/shaders/: magicmissile.glsl
project/assets/tilesets/: tileset.tsj
project/resource/: main.rc
project/src/: ecs.h  main.cpp  main.h
project/src/components/: aicontroller.h  collision.h  health.h  owner.h  playerclass.cpp  playerclass.h  playerindex.h  playerinput.h  radius.h  render2d.cpp  render2d.h  rigidbody2d.h  sprite.h  type.h
project/src/entities/: fireball.cpp  fireball.h  lizard.cpp  lizard.h  physicsobject.cpp  physicsobject.h  player.cpp  player.h
project/src/map/: levelmanager.cpp  levelmanager.h
project/src/states/game/: game.cpp  game.h
project/src/states/intro/: intro.cpp  intro.h
project/src/ui/: ui.cpp  ui.h
project/src/world/: world.cpp  world.h
